SceneCanvas shader shapes & formatting cleanup